@@ -1,23 +1,5 @@
 package io.github.thebusybiscuit.slimefun4.implementation.items.tools;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-import javax.annotation.ParametersAreNonnullByDefault;
-
-import org.bukkit.Effect;
-import org.bukkit.Material;
-import org.bukkit.block.Block;
-import org.bukkit.entity.ItemFrame;
-import org.bukkit.inventory.ItemStack;
-
 import io.github.bakedlibs.dough.collections.RandomizedSet;
 import io.github.bakedlibs.dough.protection.Interaction;
 import io.github.thebusybiscuit.slimefun4.api.items.ItemGroup;
@@ -35,15 +17,29 @@ import io.github.thebusybiscuit.slimefun4.implementation.items.electric.machines
 import io.github.thebusybiscuit.slimefun4.implementation.items.multiblocks.AutomatedPanningMachine;
 import io.github.thebusybiscuit.slimefun4.implementation.settings.GoldPanDrop;
 import io.github.thebusybiscuit.slimefun4.utils.SlimefunUtils;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+import javax.annotation.ParametersAreNonnullByDefault;
+import org.bukkit.Effect;
+import org.bukkit.Material;
+import org.bukkit.block.Block;
+import org.bukkit.entity.ItemFrame;
+import org.bukkit.inventory.ItemStack;
 
 /**
  * A {@link GoldPan} is a {@link SlimefunItem} which allows you to obtain various
  * resources from Gravel.
- * 
+ *
  * @author TheBusyBiscuit
  * @author svr333
  * @author JustAHuman
- * 
+ *
  * @see NetherGoldPan
  * @see AutomatedPanningMachine
  * @see ElectricGoldPan
@@ -51,7 +47,7 @@ import io.github.thebusybiscuit.slimefun4.utils.SlimefunUtils;
 public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements RecipeDisplayItem {
 
     private final RandomizedSet<ItemStack> randomizer = new RandomizedSet<>();
-    private final Set<Material> inputMaterials = new HashSet<>(Arrays.asList(Material.GRAVEL));
+    private final Set<Material> inputMaterials = new HashSet<>(List.of(Material.GRAVEL));
     private final Set<GoldPanDrop> drops = new HashSet<>();
 
     @ParametersAreNonnullByDefault
@@ -65,6 +61,7 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
 
     /**
      * @deprecated since RC-36
+     *
      * Use {@link GoldPan#getInputMaterials()} instead.
      */
     @Deprecated(since = "RC-36")
@@ -74,7 +71,7 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
 
     /**
      * This method returns the target {@link Material Materials} for this {@link GoldPan}.
-     * 
+     *
      * @return The {@link Set} of {@link Material Materials} this {@link GoldPan} can be used on.
      */
     public @Nonnull Set<Material> getInputMaterials() {
@@ -122,7 +119,7 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
     /**
      * This returns a random output {@link ItemStack} that can be obtained via
      * this {@link GoldPan}.
-     * 
+     *
      * @return a random {@link ItemStack} obtained by this {@link GoldPan}
      */
     public @Nonnull ItemStack getRandomOutput() {
@@ -132,13 +129,15 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
         return item != null ? item : new ItemStack(Material.AIR);
     }
 
+    @Nonnull
     @Override
-    public @Nonnull String getLabelLocalPath() {
+    public String getLabelLocalPath() {
         return "guide.tooltips.recipes.gold-pan";
     }
 
+    @Nonnull
     @Override
-    public @Nonnull ItemUseHandler getItemHandler() {
+    public ItemUseHandler getItemHandler() {
         return e -> {
             Optional<Block> block = e.getClickedBlock();
 
@@ -146,7 +145,9 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
                 Block b = block.get();
 
                 // Check the clicked block type and for protections
-                if (isValidInputMaterial(b.getType()) && Slimefun.getProtectionManager().hasPermission(e.getPlayer(), b.getLocation(), Interaction.BREAK_BLOCK)) {
+                if (isValidInputMaterial(b.getType())
+                        && Slimefun.getProtectionManager()
+                                .hasPermission(e.getPlayer(), b.getLocation(), Interaction.BREAK_BLOCK)) {
                     ItemStack output = getRandomOutput();
 
                     b.getWorld().playEffect(b.getLocation(), Effect.STEP_SOUND, b.getType());
@@ -154,7 +155,8 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
 
                     // Make sure that the randomly selected item is not air
                     if (output.getType() != Material.AIR) {
-                        SlimefunUtils.spawnItem(b.getLocation(), output.clone(), ItemSpawnReason.GOLD_PAN_USE, true, e.getPlayer());
+                        SlimefunUtils.spawnItem(
+                                b.getLocation(), output.clone(), ItemSpawnReason.GOLD_PAN_USE, true, e.getPlayer());
                     }
                 }
             }
@@ -169,7 +171,8 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
      *
      * @return the {@link EntityInteractHandler} of this {@link SlimefunItem}
      */
-    public @Nonnull EntityInteractHandler onEntityInteract() {
+    @Nonnull
+    public EntityInteractHandler onEntityInteract() {
         return (e, item, offHand) -> {
             if (!(e.getRightClicked() instanceof ItemFrame)) {
                 e.setCancelled(true);
@@ -177,8 +180,9 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
         };
     }
 
+    @Nonnull
     @Override
-    public @Nonnull List<ItemStack> getDisplayRecipes() {
+    public List<ItemStack> getDisplayRecipes() {
         List<ItemStack> recipes = new ArrayList<>();
 
         for (GoldPanDrop drop : drops) {
@@ -209,7 +213,8 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
         }
 
         Material material = itemStack.getType();
-        return isValidInputMaterial(material) && SlimefunUtils.isItemSimilar(itemStack, new ItemStack(material), true, false);
+        return isValidInputMaterial(material)
+                && SlimefunUtils.isItemSimilar(itemStack, new ItemStack(material), true, false);
     }
 
     /**
@@ -223,5 +228,4 @@ public class GoldPan extends SimpleSlimefunItem<ItemUseHandler> implements Recip
     public boolean isValidInputMaterial(@Nonnull Material material) {
         return getInputMaterials().contains(material);
     }
-
 }
