@@ -1,31 +1,27 @@
 package io.github.thebusybiscuit.slimefun4.integrations;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-
-import javax.annotation.Nonnull;
-
-import org.bukkit.Bukkit;
-import org.bukkit.block.Block;
-import org.bukkit.event.EventHandler;
-import org.bukkit.event.EventPriority;
-import org.bukkit.event.Listener;
-
 import io.github.thebusybiscuit.slimefun4.api.events.BlockPlacerPlaceEvent;
 import io.github.thebusybiscuit.slimefun4.api.events.ExplosiveToolBreakBlocksEvent;
 import io.github.thebusybiscuit.slimefun4.api.events.PlayerRightClickEvent;
 import io.github.thebusybiscuit.slimefun4.api.events.ReactorExplodeEvent;
 import io.github.thebusybiscuit.slimefun4.implementation.Slimefun;
 import io.github.thebusybiscuit.slimefun4.implementation.items.tools.GoldPan;
-
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import javax.annotation.Nonnull;
 import net.imprex.orebfuscator.api.OrebfuscatorService;
+import org.bukkit.Bukkit;
+import org.bukkit.block.Block;
+import org.bukkit.event.EventHandler;
+import org.bukkit.event.EventPriority;
+import org.bukkit.event.Listener;
 
 /**
- * 
+ *
  * This handles block breaks with orebfuscator
- * 
+ *
  * @author NgLoader
  *
  */
@@ -42,7 +38,10 @@ class OrebfuscatorIntegration implements Listener {
      * Init orebfuscation service and register listener
      */
     public void register() {
-        this.service = Bukkit.getServer().getServicesManager().getRegistration(OrebfuscatorService.class).getProvider();
+        this.service = Bukkit.getServer()
+                .getServicesManager()
+                .getRegistration(OrebfuscatorService.class)
+                .getProvider();
 
         plugin.getServer().getPluginManager().registerEvents(this, plugin);
     }
@@ -54,20 +53,21 @@ class OrebfuscatorIntegration implements Listener {
 
     @EventHandler(priority = EventPriority.MONITOR, ignoreCancelled = true)
     public void onExplosiveToolBreakBlocks(ExplosiveToolBreakBlocksEvent event) {
-        Set<Block> blocks = new HashSet<>();
-        blocks.addAll(event.getAdditionalBlocks());
+        Set<Block> blocks = new HashSet<>(event.getAdditionalBlocks());
         blocks.add(event.getPrimaryBlock());
         this.service.deobfuscate(blocks);
     }
 
     @EventHandler(priority = EventPriority.MONITOR, ignoreCancelled = true)
     public void onReactorExplode(ReactorExplodeEvent event) {
-        this.service.deobfuscate(Arrays.asList(event.getLocation().getBlock()));
+        this.service.deobfuscate(List.of(event.getLocation().getBlock()));
     }
 
     @EventHandler(priority = EventPriority.MONITOR, ignoreCancelled = true)
     public void onGoldPanUse(PlayerRightClickEvent event) {
-        if (event.getSlimefunItem().isPresent() && event.getClickedBlock().isPresent() && event.getSlimefunItem().get() instanceof GoldPan) {
+        if (event.getSlimefunItem().isPresent()
+                && event.getClickedBlock().isPresent()
+                && event.getSlimefunItem().get() instanceof GoldPan) {
             this.service.deobfuscate(List.of(event.getClickedBlock().get()));
         }
     }
